# INTERACT-Morph

./: README.md  pyproject.toml
configs/baselines/: family_a_heuristic.json  family_a_heuristic.yaml
configs/modeling/: family_a_contour_extraction_v1.json  family_a_feature_qa_v1.json  family_a_label_correction_v1.json  family_a_multimodal_v1.json  family_a_multimodal_v1_finetune.json  family_a_recommendation_v1.json  family_a_segmentation_v1.json  (+1 more)
docs/data/: DATA_ARCHITECTURE.md  (+3 more)
locks/: environment.lock.txt
schemas/: derived_features.schema.json  run_metadata.schema.json
scripts/: analyze_campaign_outcomes.py  baseline_regime_map.py  build_dataset_card.py  build_experiment_execution_template.py  build_failure_mode_analysis.py  build_feature_qa_dashboard.py  build_inventory.py  build_label_correction_queue.py  build_mvp_governance_pack.py  build_recommendation_ui.py  calibrate_multimodal_uncertainty.py  check_data_handoff.py  check_deterministic_training.py  create_split.py  export_environment_lockfile.py  extract_contours_trajectories.py  generate_model_card.py  generate_simulation_corpus.py  ingest_runs.py  plan_axisymmetric_sweep.py  prepare_prospective_campaign.py  recommend_next_experiments.py  report_simulation_realism.py  run_smoke_checks.py  snapshot_dataset.py  train_interface_segmentation.py  train_multimodal_model.py  validate_dataset.py
templates/: labels.template.json  model_card.template.md  run_metadata.template.json
tests/: test_cli.py  test_data_handoff.py  test_dataset_card.py  test_mvp_governance.py  test_repro_lock.py  test_smoke_checks.py
(+494 files in other folders)
